# cobotta-mycobot-ros

src/cobotta_mycobot_dual_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cobotta_mycobot_dual_robot_moveit_config/config/: cobotta_mycobot_dual_robot.srdf  fake_controllers.yaml  gazebo_cobotta_mycobot_dual_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/cobotta_mycobot_dual_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/dual_robot_description/: CMakeLists.txt  package.xml
src/dual_robot_description/meshes/cobotta/: COBOTTA_gripper_4.STL
src/dual_robot_description/scripts/: generate_dual_urdf.py
src/dual_robot_description/urdf/: dual_robot.urdf
src/dummy_ros1_driver/: CMakeLists.txt  CMakeLists.txt.save  package.xml
src/dummy_ros1_driver/include/dummy_ros1_driver/: tcpip.h
src/dummy_ros1_driver/src/: cobotta_tcp_send_test.cpp  dummy_ros1_driver.cpp  jointstate_tcp_sender.cpp  tcpip.cpp
src/mycobot_280_description_ros1/: CMakeLists.txt  package.xml
src/mycobot_280_description_ros1/urdf/: mycobot_280.urdf
src/origami_grasp_bridge/: CMakeLists.txt  package.xml
src/origami_grasp_bridge/config/: origami_grasp_check.rviz
src/origami_grasp_bridge/launch/: origami_grasp_pipeline.launch
src/origami_grasp_bridge/scripts/: grasp_point_to_pose.py  grasp_pose_to_moveit.py  origami_collision_scene.py  unity_to_ros_point.py
