<?xml version="1.0"?>
<package format="2">
  <name>dual_robot_description</name>
  <version>0.0.1</version>
  <description>Combined ROS1 description for COBOTTA and myCobot 280.</description>

  <maintainer email="maeda@example.com">maeda</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>denso_cobotta_descriptions</exec_depend>
  <exec_depend>mycobot_280_description_ros1</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export/>
</package>
