<?xml version="1.0"?>
<package format="2">
  <name>dummy_ros1_driver</name>
  <version>0.1.0</version>
  <description>ROS 1 dummy driver for testing ros1_bridge and ros2_control integration.</description>
  <maintainer email="maeda@todo.todo">maeda</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  </package>